chanhed name from alex to marti

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <h1>MY NAME IS ALEX</h1>
+    <h1>MY NAME IS MARTI</h1>
     <h2>MY NAME IS GH-PAGES</h2>
-    
+
 </body>
 
 </html>
