--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>MY NAME IS MARTINOSE</h1>
+    <h1>GEGAGEGIGEGAGGOAL ONGTIMEAGOE</h1>
     <h2>MY NAME IS GH-PAGES</h2>
 
 </body>
